--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/kr-aashish/ShopKGP/issues"
   },
-  "homepage": "https://github.com/kr-aashish/ShopKGP#readme"
+  "homepage": "https://github.com/kr-aashish/ShopKGP#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.1.2"
+  }
 }
