--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "An internal refurbished products E-commerce platform for the KGP marketplace",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "start": "npx nodemon"
   },
   "repository": {
     "type": "git",
