--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "An internal refurbished products E-commerce platform for the KGP marketplace",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon"
   },
   "repository": {
@@ -24,6 +24,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.1.2"
+    "mysql2": "^3.1.2",
+    "sequelize": "^6.29.0",
+    "sequelize-cli": "^6.6.0"
   }
 }
