--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^7.0.0",
     "mysql2": "^3.1.2",
     "sequelize": "^6.29.0",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "stripe": "^11.13.0"
   }
 }
