--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.1",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
