--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1328.0",
     "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
