--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,10 @@
 MONGO_URI="mongodb+srv://ak:raJveg-6xitki-zovfeh@cluster0.jvodxnw.mongodb.net/?retryWrites=true&w=majority"
 TOKEN_KEY="eiadfnlsdjfdskjfsdsdgjadsioriwenejpc"
 API_PORT=8000
+
+#Database credentials
+DB_USERNAME="root",
+DB_PASSWORD="god_speed",
+DB_DATABASE="ShopKGP",
+DB_HOST="localhost",
+DB_DIALECT="mysql"
