--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "mysql2": "^3.1.2",
     "sequelize": "^6.29.0",
     "sequelize-cli": "^6.6.0",
-    "stripe": "^11.13.0"
+    "stripe": "^11.13.0",
+    "validator": "^13.9.0"
   }
 }
