--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://ak:raJveg-6xitki-zovfeh@cluster0.jvodxnw.mongodb.net/?retryWrites=true&w=majority"
+# MONGO_URI="mongodb+srv://ak:raJveg-6xitki-zovfeh@cluster0.jvodxnw.mongodb.net/?retryWrites=true&w=majority"
 TOKEN_KEY="eiadfnlsdjfdskjfsdsdgjadsioriwenejpc"
 API_PORT=8000
 
