--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
   },
   "homepage": "https://github.com/kr-aashish/ShopKGP#readme",
   "dependencies": {
+    "@stripe/stripe-js": "^1.52.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.1.4",
     "jsonwebtoken": "^9.0.0",
+    "micro": "^10.0.1",
     "mongoose": "^7.0.0",
     "mysql2": "^3.2.0",
+    "raw-body": "^2.5.2",
     "sequelize": "^6.29.0",
     "sequelize-cli": "^6.6.0",
-    "stripe": "^11.13.0",
+    "stripe": "^11.18.0",
     "validator": "^13.9.0"
   }
 }
